--- a/code/main.css
+++ b/code/main.css
@@ -18,6 +18,16 @@ float: right;
     right: 750px;
     /*transform: translate(-250px,0,0,-750px);*/
 }
+.material-icons{
+    position: absolute;
+    width: 100px;
+    height: auto;
+    top: 600px;
+    right: 750px;
+   color: #e94073;
+
+}
+.material-icons.md-48 { font-size: 48px; }
 .content  {
     position: absolute;
     top: 250px;
